changed body css so footer no longer overlaps onto content

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.footerFix {
+  padding-bottom: 10%;
+}
